--- a/task-02-boxes/src/App.css
+++ b/task-02-boxes/src/App.css
@@ -1,14 +1,9 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: saddlebrown;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.box {
+  display: inline-block;
+  height: 200px;
+  width: 200px;
+  background-color: white;
+  border-radius: 5px;
+  margin: 1rem;
+  padding: 1rem;
 }
