--- a/task-02-boxes/src/index.css
+++ b/task-02-boxes/src/index.css
@@ -1,9 +1,6 @@
 body {
   margin: 0;
-  background-color: lightcoral;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #f8f6f1;
+  color: #211e1c;
+  text-align: center;
 }
