--- a/task-03-counter/src/App.css
+++ b/task-03-counter/src/App.css
@@ -1,9 +1,65 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: ivory;
+  text-align: center;
+  width: 100%;
+}
+
+header,
+footer {
+  padding: 1rem;
+  text-align: left;
+  width: 100%;
+  background-color: lightsalmon;
+}
+
 .circle {
-  background-color: grey;
+  background-color: silver;
   height: 200px;
   width: 200px;
+  margin: 2rem auto;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 3rem;
+}
+
+.even {
+  background-color: lightblue;
+}
+
+.odd {
+  background-color: lightgreen;
+}
+
+button {
+  background-color: silver;
+  border-radius: 5px;
+  width: 150px;
+  padding: 1rem;
+  border: none;
+  margin: 0 1rem;
+  margin-top: 3rem;
+  cursor: pointer;
+}
+
+footer {
+  position: fixed;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  color: white;
 }
