--- a/task-04-speed-game/src/index.css
+++ b/task-04-speed-game/src/index.css
@@ -1,8 +1,162 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #aedcea;
+  height: 100%;
+  font-family: "Press Start 2P", "Courier New", Courier, monospace;
+  text-align: center;
+  line-height: 1.8rem;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  height: 90vh;
+  justify-content: center;
+}
+
+h1 {
+  color: #ffcb05;
+  text-shadow: -4px 0 #3c5aa6, 0 4px #3c5aa6, 4px 0 #3c5aa6, 0 -4px #3c5aa6;
+  margin-bottom: 1rem;
+}
+
+/**************** Game Buttons ****************/
+
+.circles {
+  width: 100%;
+  margin: 2rem auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: white;
+  border: 1px solid black;
+  margin: 1rem;
+  cursor: pointer;
+}
+
+.circle:active,
+.circle:focus {
+  outline: none;
+}
+
+.bulbasaur {
+  background-image: url("./img/bulbasaur.png");
+}
+.charmander {
+  background-image: url("./img/charmander.png");
+}
+
+.squirtle {
+  background-image: url("./img/squirtle.png");
+}
+
+.pikachu {
+  background-image: url("./img/pikachu.png");
+}
+
+/* .active {
+  background-color: tomato;
+} */
+
+.inactive {
+  background-image: radial-gradient(
+      white 10%,
+      black 11%,
+      black 15%,
+      transparent 16%
+    ),
+    linear-gradient(0deg, white 45%, black 45%, black 55%, red 55%);
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+}
+
+#start,
+#stop {
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/**************** Game Over Overlay ****************/
+
+#overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+}
+
+.popup {
+  background-color: white;
+  border-radius: 15px;
+  width: 90vw;
+  height: 50vh;
+  max-width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  padding: 2%;
+}
+
+h2 {
+  margin-bottom: 1rem;
+}
+
+#close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  border: none;
+  background-color: white;
+  font-size: 1.5rem;
+}
+
+.btn-text {
+  font-family: "Press Start 2P", cursive;
+}
+
+.btn-text:hover {
+  color: rgba(0, 0, 0, 0.7);
+}
+
+@media (max-width: 576px) {
+  html {
+    font-size: 14px;
+  }
+  .container {
+    justify-content: start;
+    margin-top: 5vh;
+  }
+
+  .responsive {
+    display: block;
+  }
 }
