--- a/task-04-speed-game/src/App.css
+++ b/task-04-speed-game/src/App.css
@@ -52,6 +52,7 @@
   display: flex;
   justify-content: space-between;
   width: 200px;
+  margin: 0 auto;
 }
 
 #start,
@@ -59,4 +60,49 @@
   padding: 0.5rem 1rem;
   border-radius: 5px;
   cursor: pointer;
+}
+
+/**************** Game Over Overlay ****************/
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  place-content: center;
+}
+
+.popup {
+  background-color: white;
+  border-radius: 15px;
+  width: 90vw;
+  height: 50vh;
+  max-width: 600px;
+  display: grid;
+  place-content: center;
+  position: relative;
+  padding: 2%;
+}
+
+h2 {
+  margin-bottom: 1rem;
+}
+
+.close-btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  border: none;
+  background-color: white;
+  font-size: 1.5rem;
+}
+
+.btn-text {
+  font-family: "Press Start 2P", cursive;
+}
+
+.btn-text:hover {
+  color: rgba(0, 0, 0, 0.7);
 }
