--- a/task-04-speed-game/src/index.css
+++ b/task-04-speed-game/src/index.css
@@ -15,77 +15,16 @@ body {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  place-content: center;
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-  height: 90vh;
-  justify-content: center;
+  height: 100vh;
 }
 
 h1 {
   color: #ffcb05;
   text-shadow: -4px 0 #3c5aa6, 0 4px #3c5aa6, 4px 0 #3c5aa6, 0 -4px #3c5aa6;
   margin-bottom: 1rem;
-}
-
-/**************** Game Over Overlay ****************/
-
-#overlay {
-  background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  visibility: hidden;
-}
-
-.popup {
-  background-color: white;
-  border-radius: 15px;
-  width: 90vw;
-  height: 50vh;
-  max-width: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-  padding: 2%;
-}
-
-h2 {
-  margin-bottom: 1rem;
-}
-
-#close {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  border: none;
-  background-color: white;
-  font-size: 1.5rem;
-}
-
-.btn-text {
-  font-family: "Press Start 2P", cursive;
-}
-
-.btn-text:hover {
-  color: rgba(0, 0, 0, 0.7);
-}
-
-@media (max-width: 576px) {
-  html {
-    font-size: 14px;
-  }
-  .container {
-    justify-content: start;
-    margin-top: 5vh;
-  }
 }
