--- a/task-05-forms/src/index.css
+++ b/task-05-forms/src/index.css
@@ -1,24 +1,29 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: steelblue;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background-color: steelblue;
 }
 
 section {
-  padding: 5%;
+	padding: 5%;
 }
 
 button {
-  box-sizing: border-box;
-  cursor: pointer;
-  padding: 0.5rem 1rem;
+	box-sizing: border-box;
+	cursor: pointer;
+	padding: 0.5rem 1rem;
+}
+
+:focus {
+	outline: 2px dashed white;
+	outline-offset: 5px;
 }
